--- a/src/app/common/header/header.component.html
+++ b/src/app/common/header/header.component.html
@@ -2,7 +2,7 @@
   <div class="container">
     <table class="table table-branded" style="table-layout: auto; height: 40px; ">
       <tr>
-        <td> <button routerLink="/" class="logo">{{appTitle}}</button>
+        <td> <button routerLink="/" class="logo">{{apppTooltip}}</button>
         </td>
         <td><button routerLink="/">Home</button></td>
         <td><button routerLink="/about">About</button></td>
