--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -1,8 +1,8 @@
 <div style="padding-left: 2.5%">
   <div class="card" style="width: 20rem;">
     <div class="card-body">
-      <h5 class="card-title">Vijay Aditya</h5>
-      <h6 class="card-subtitle mb-2 text-muted">Software Engineer</h6>
+      <h5 class="card-pTooltip">Vijay Aditya</h5>
+      <h6 class="card-subpTooltip mb-2 text-muted">Software Engineer</h6>
       <button class="card-link" href="https://github.com/pidaparthivijay"><img
           src="https://img.icons8.com/material/24/000000/github.png"></button>
       <button href="https://www.facebook.com/aditya.vijay.9279" class="cardxs-link"><img
