--- a/src/app/cust-home/tour-booking/tour-booking.component.html
+++ b/src/app/cust-home/tour-booking/tour-booking.component.html
@@ -20,7 +20,7 @@
                     value="2">
             </td>
             <td>
-                <input type="date" title="Tour Start Date" name="startDate" class="form-control"
+                <input type="date" pTooltip="Tour Start Date" name="startDate" class="form-control"
                     id="startDate{{tourPackage.tourPackageName}}">
 
             </td>
