--- a/src/app/emp-home/emp-home.component.html
+++ b/src/app/emp-home/emp-home.component.html
@@ -1,38 +1,54 @@
+<br>
 <table class="table table-bordered table-striped" style="width: 45%">
   <tr>
     <td><button class="btn btn-primary" (click)="generateBill();">Generate Bill</button></td>
     <td><button class="btn btn-primary" (click)="viewProfile();">View My Profile</button></td>
   </tr>
 </table>
-
-<div *ngIf="viewProf">
-  <table class="table table-bordered table-striped" style="width: 45%">
-    <tr>
-      <th>Name</th>
-      <td>{{employee.empName}}</td>
-    </tr>
-    <tr>
-      <th>Gender</th>
-      <td>{{employee.empGen}}</td>
-    </tr>
+<p-table #employeeTable *ngIf="viewProf" [style]="{'width':'70%','margin-top':'8px'}" [value]="[employee]">
+  <ng-template pTemplate="header">
     <tr>
       <th>Employee Id</th>
-      <td>{{employee.empId}}</td>
-    </tr>
-    <tr>
-      <th>Email</th>
-      <td>{{employee.email}}</td>
-    </tr>
-    <tr>
+      <th>Name</th>
+      <th>Gender</th>
+      <th style="width:25%">Email</th>
       <th>Username</th>
-      <td>{{employee.userName}}</td>
+      <th>Action</th>
     </tr>
+  </ng-template>
+  <ng-template pTemplate="body">
     <tr>
-      <th>Password</th>
-      <td>{{employee.empPass}}</td>
+      <td>{{employee.empId}}</td>
+      <td pEditableColumn>
+        <p-cellEditor>
+          <ng-template pTemplate="input">
+            <input pInputText type="text" [(ngModel)]="employee.empName" pTooltip="Editing the name of employee"
+              amenityName>
+          </ng-template>
+          <ng-template pTemplate="output">
+            {{employee.empName}}
+          </ng-template>
+        </p-cellEditor>
+      </td>
+      <td pEditableColumn>
+        <p-cellEditor>
+          <ng-template pTemplate="input">
+            <p-dropdown [options]="genderLookup" [(ngModel)]="employee.empGen" optionLabel="displayName"
+              optionValue="lookupValue" (onChange)="onGender($event)" pTooltip="Gender"
+              [style]="{'width':'auto', 'height':'auto'}">
+            </p-dropdown>
+          </ng-template>
+          <ng-template pTemplate="output">
+            {{employee.empGen}}
+          </ng-template>
+        </p-cellEditor>
+      </td>
+      <td style="width:25%">{{employee.email}}</td>
+      <td>{{employee.userName}}</td>
+      <td><button class="btn btn-primary" (click)="updateDetails(employee);">Update</button></td>
     </tr>
-  </table>
-</div>
+  </ng-template>
+</p-table>
 
 <div *ngIf="viewCustBill">
   <table class="table table-bordered table-striped" style="width: 45%">
@@ -44,22 +60,32 @@
   </table>
 </div>
 
-<div *ngIf="requestList.length>0">
-  <table class="table table-bordered table-striped" style="width: 45%; background:teal">
-    <thead>
-      <tr>
-        <th>Request Date</th>
-        <th>Request Type</th>
-        <th>Request ID</th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr *ngFor="let request of requestList">
-        <td>{{request.requestDate === null ? "" : request.requestDate| date:'dd MMM, yyyy'}}</td>
-        <td>{{request.typeOfRequest}}</td>
-        <td>{{request.requestId === 0 ? "" : request.requestId}} {{request.billAmount === 0 ? "" : request.billAmount}}
-        </td>
-      </tr>
-    </tbody>
-  </table>
-</div>
+
+<p-table #billTable *ngIf="requestList?.length>0" [style]="{'width':'70%','margin-top':'8px'}" [value]="requestList"
+  [paginator]="true" [showCurrentPageReport]="true"
+  currentPageReportTemplate="Showing {first} to {last} of {totalRecords} entries" [rowsPerPageOptions]="[3, 5,7]"
+  [rows]="10">
+  <ng-template pTemplate="header">
+    <tr>
+      <th>Request Id
+      </th>
+      <th>Request Date
+      </th>
+      <th>Request Type</th>
+      <th>Bill Amount</th>
+    </tr>
+  </ng-template>
+  <ng-template pTemplate="body" let-request let-editing="editing" let-ri="rowIndex">
+    <tr>
+      <td>{{request.requestId === 0 ?"" : request.requestId}}</td>
+      <td>{{request.typeOfRequest}}</td>
+      <td>{{request.requestDate === null ? "" : request.requestDate| date:'dd MMM, yyyy'}}</td>
+      <td>{{request.billAmount}}</td>
+    </tr>
+  </ng-template>
+  <ng-template pTemplate="summary">
+    <button style="text-align: left;" download="bill.pdf" class="btn btn-primary" (click)="getFile();">Print</button>
+    <button style="float: right;" download="bill.pdf" class="btn btn-primary" (click)="mailBillToUser();">Send to
+      User</button>
+  </ng-template>
+</p-table>
