--- a/src/app/common/logout/logout.component.html
+++ b/src/app/common/logout/logout.component.html
@@ -1,1 +1,9 @@
-<p>logout works!</p>
+<h1>
+    <strong>
+        <p>
+            Successfully Logged out <span style='font-size:40px;'>😀</span>
+        </p>
+
+    </strong>
+</h1>
+<button class="btn btn-primary" pButton label="Login" pTooltip="Login" routerLink="/login"></button>
