--- a/src/app/room-registration/room-registration.component.html
+++ b/src/app/room-registration/room-registration.component.html
@@ -25,12 +25,11 @@
         </td>
         <td>
           <div class="form-group">
-            <select name="guestGen" formControlName="guestGen" class="form-control"
-              [ngClass]="{ 'is-invalid': submitted && f.guestGen.errors }">
-              <option value="">Gender</option>
-              <option *ngFor="let gender of genders; let i = index;" value="{{gender.lookupValue}}" [selected]="i==0">
-                {{gender.displayName}}</option>
-            </select>
+            <p-dropdown [options]="genders" class="form-control" placeholder="Select Gender" pTooltip="Gender"
+              name="gender" [(ngModel)]="guestGen" [virtualScroll]="false"
+              [ngClass]="{ 'is-invalid': submitted && f.guestGen.errors }" formControlName="guestGen"
+              optionLabel="displayName" [style]="{'width':'200px', 'height':'auto'}">
+            </p-dropdown>
             <div *ngIf="submitted && f.guestGen.errors" class="invalid-feedback">
               <div *ngIf="f.guestGen.errors.required">Gender is required</div>
             </div>
@@ -49,13 +48,11 @@
         </td>
         <td>
           <div class="form-group">
-            <select name="guestCount" formControlName="guestCount" class="form-control"
-              [ngClass]="{ 'is-invalid': submitted && f.guestCount.errors }">
-              <option value="">Count</option>
-              <option *ngFor="let guestCount of guestCounts; let i = index;" value="{{guestCount.lookupValue|number}}"
-                [selected]="i==0">
-                {{guestCount.displayName}}</option>
-            </select>
+            <p-dropdown [options]="guestCounts" class="form-control" placeholder="Select Guest Count"
+              pTooltip="Number of guests" name="guestCount" [(ngModel)]="guestCount" [virtualScroll]="true"
+              [ngClass]="{ 'is-invalid': submitted && f.guestCount.errors }" formControlName="guestCount"
+              optionLabel="displayName" [style]="{'width':'200px', 'height':'auto'}">
+            </p-dropdown>
             <div *ngIf="submitted && f.guestCount.errors" class="invalid-feedback">
               <div *ngIf="f.guestCount.errors.required">Guest Count is required</div>
             </div>
@@ -65,27 +62,23 @@
       <tr>
         <td>
           <div class="form-group">
-            <select formControlName="roomModel" class="form-control"
-              [ngClass]="{ 'is-invalid': submitted && f.roomType.errors }">
-              <option value="">Model Of Rooms</option>
-              <option *ngFor="let roomModel of roomModels; let i = index;" value="{{roomModel.lookupValue}}"
-                [selected]="i==0">
-                {{roomModel.displayName}}</option>
-            </select>
-            <div *ngIf="submitted && f.roomType.errors" class="invalid-feedback">
-              <div *ngIf="f.roomType.errors.required">Please select type of Rooms</div>
+            <p-dropdown [options]="roomModels" class="form-control" placeholder="Select Room Model"
+              pTooltip="Room Model" name="roomModel" [(ngModel)]="roomModel" [virtualScroll]="false"
+              [ngClass]="{ 'is-invalid': submitted && f.roomModel.errors }" formControlName="roomModel"
+              optionLabel="displayName" [style]="{'width':'200px', 'height':'auto'}">
+            </p-dropdown>
+            <div *ngIf="submitted && f.roomModel.errors" class="invalid-feedback">
+              <div *ngIf="f.roomModel.errors.required">Please select model of Rooms</div>
             </div>
           </div>
         </td>
         <td>
           <div class="form-group">
-            <select name="roomCategory" formControlName="roomCategory" class="form-control"
-              [ngClass]="{ 'is-invalid': submitted && f.roomCategory.errors }">
-              <option value="">Category</option>
-              <option *ngFor="let roomCategory of roomCategoryList; let i = index;" value="{{roomCategory.lookupValue}}"
-                [selected]="i==0">
-                {{roomCategory.displayName}}</option>
-            </select>
+            <p-dropdown [options]="roomCategoryList" class="form-control" placeholder="Select Room Category"
+              pTooltip="Room Category" name="roomCategory" [(ngModel)]="roomCategory" [virtualScroll]="false"
+              [ngClass]="{ 'is-invalid': submitted && f.roomCategory.errors }" formControlName="roomCategory"
+              optionLabel="displayName" [style]="{'width':'200px', 'height':'auto'}">
+            </p-dropdown>
             <div *ngIf="submitted && f.roomCategory.errors" class="invalid-feedback">
               <div *ngIf="f.roomCategory.errors.required">Room Category is required</div>
             </div>
@@ -95,13 +88,11 @@
       <tr>
         <td>
           <div class="form-group">
-            <select name="roomType" formControlName="roomType" class="form-control"
-              [ngClass]="{ 'is-invalid': submitted && f.roomType.errors }">
-              <option value="">Type</option>
-              <option *ngFor="let roomType of roomTypes; let i = index;" value="{{roomType.lookupValue}}"
-                [selected]="i==0">
-                {{roomType.displayName}}</option>
-            </select>
+            <p-dropdown [options]="roomTypes" class="form-control" placeholder="Select Room Type" pTooltip="Room Type"
+              name="roomType" [(ngModel)]="roomType" [virtualScroll]="false"
+              [ngClass]="{ 'is-invalid': submitted && f.roomType.errors }" formControlName="roomType"
+              optionLabel="displayName" [style]="{'width':'200px', 'height':'auto'}">
+            </p-dropdown>
             <div *ngIf="submitted && f.roomType.errors" class="invalid-feedback">
               <div *ngIf="f.roomCategory.errors.required">Room Type is required</div>
             </div>
