--- a/src/app/adm-home/amenity-management/amenity-management.component.html
+++ b/src/app/adm-home/amenity-management/amenity-management.component.html
@@ -1,9 +1,43 @@
-<button class="btn-primary" pTooltip="Click to view all the Amenities" (click)="viewAmenitiesList()">List All
-    Amenities</button> &nbsp;&nbsp;&nbsp;&nbsp;
 <button class="btn-primary" pTooltip="Click to create a new Amenity" (click)="createNewAmenity()">New Amenity</button>
 <br>
 <br>
-<p-table #amenityTable *ngIf="!newAmenity && viewAmenities" [style]="{'width':'50%','margin-top':'8px'}"
+<div class="float-right" *ngIf="newAmenity">
+    <form [formGroup]="amenityRegistrationForm" (ngSubmit)="createAmenity()">
+        <table class="table table-striped table-hover" style="width: 25rem;">
+            <tr>
+                <td colspan="2">
+                    <div class="form-group">
+                        <input type="text" formControlName="amenityName" class="form-control" pTooltip="Name of Amenity"
+                            [ngClass]="{ 'is-invalid': submitted && f.amenityName.errors }" name="amenityName"
+                            id="amenityName" placeholder="Name of the Amenity" style="width: 100%;">
+                        <div *ngIf="submitted && f.amenityName.errors" class="invalid-feedback">
+                            <div *ngIf="f.amenityName.errors.required">Name is required</div>
+                        </div>
+                    </div>
+                </td>
+            </tr>
+            <tr>
+                <td colspan="2">
+                    <div class="form-group">
+                        <input type="price" class="form-control" pTooltip="Price of Amenity being provided"
+                            [ngClass]="{ 'is-invalid': submitted && f.price.errors }" formControlName="price" id="price"
+                            placeholder="Price" style="width: 100%;">
+                        <div *ngIf="submitted && f.price.errors" class="invalid-feedback">
+                            <div *ngIf="f.price.errors.required">Price is required</div>
+                        </div>
+                    </div>
+                </td>
+            </tr>
+            <tr>
+                <td><input type="submit" pTooltip="Create the amenity with given details" class="btn-primary"
+                        value="Create Amenity"></td>
+                <td><input type="reset" pTooltip="Reset the form" class="btn-primary" value="Reset"></td>
+            </tr>
+        </table>
+    </form>
+</div>
+
+<p-table #amenityTable *ngIf="amenitiesList?.length" [style]="{'width':'50%','margin-top':'8px'}"
     [value]="amenitiesList" [globalFilterFields]="['amenityId','amenityName','price']" [paginator]="true"
     [showCurrentPageReport]="true" currentPageReportTemplate="Showing {first} to {last} of {totalRecords} entries"
     [rowsPerPageOptions]="[5, 10,15]" [rows]="10">
@@ -78,38 +112,3 @@
         </tr>
     </ng-template>
 </p-table>
-<div class="center" *ngIf="newAmenity && !viewAmenities">
-    <form [formGroup]="amenityRegistrationForm" (ngSubmit)="createAmenity()">
-        <table class="table table-striped table-hover" style="width: 25rem;">
-            <tr>
-                <td colspan="2">
-                    <div class="form-group">
-                        <input type="text" formControlName="amenityName" class="form-control" pTooltip="Name of Amenity"
-                            [ngClass]="{ 'is-invalid': submitted && f.amenityName.errors }" name="amenityName"
-                            id="amenityName" placeholder="Name of the Amenity" style="width: 100%;">
-                        <div *ngIf="submitted && f.amenityName.errors" class="invalid-feedback">
-                            <div *ngIf="f.amenityName.errors.required">Name is required</div>
-                        </div>
-                    </div>
-                </td>
-            </tr>
-            <tr>
-                <td colspan="2">
-                    <div class="form-group">
-                        <input type="price" class="form-control" pTooltip="Price of Amenity being provided"
-                            [ngClass]="{ 'is-invalid': submitted && f.price.errors }" formControlName="price" id="price"
-                            placeholder="Price" style="width: 100%;">
-                        <div *ngIf="submitted && f.price.errors" class="invalid-feedback">
-                            <div *ngIf="f.price.errors.required">Price is required</div>
-                        </div>
-                    </div>
-                </td>
-            </tr>
-            <tr>
-                <td><input type="submit" pTooltip="Create the amenity with given details" class="btn-primary"
-                        value="Create Amenity"></td>
-                <td><input type="reset" pTooltip="Reset the form" class="btn-primary" value="Reset"></td>
-            </tr>
-        </table>
-    </form>
-</div>
