--- a/src/app/registration/registration.component.html
+++ b/src/app/registration/registration.component.html
@@ -40,9 +40,10 @@
         </td>
         <td>
           <div class="form-group">
-            <p-dropdown [options]="genderLookup" class="form-control" (onChange)="onGender($event)" pTooltip="Gender"
+            <p-dropdown [options]="genderLookup" class="form-control" placeholder="Select Gender" pTooltip="Gender"
+              name="gender" [(ngModel)]="gender" [virtualScroll]="false"
               [ngClass]="{ 'is-invalid': submitted && f.custGen.errors }" formControlName="custGen"
-              optionLabel="displayName" optionValue="lookupValue" [style]="{'width':'auto', 'height':'auto'}">
+              optionLabel="displayName" [style]="{'width':'auto', 'height':'auto'}">
             </p-dropdown>
             <div *ngIf="submitted && f.custGen.errors" class="invalid-feedback">
               <div *ngIf="f.custGen.errors.required">Gender is required</div>
