authGuard and Sidebar

--- a/src/app/cust-home/cust-home.component.html
+++ b/src/app/cust-home/cust-home.component.html
@@ -1,7 +1,7 @@
 Hey {{custName}}!!! What would you like to do now? <br>
 <table class="table table-bordered table-striped" style="width: 45%">
   <tr>
-    <td><button class="btn btn-primary" routerLink="/roomReg">Room Registration</button></td>
+    <td><button class="btn btn-primary" routerLink="custWelcome/roomReg">Room Registration</button></td>
     <td><button class="btn btn-primary" (click)="viewProfile();">View My Profile</button></td>
     <td><button class="btn btn-primary" (click)="viewRequests();">View My Requests</button></td>
     <td><button class="btn btn-primary" (click)="viewRewardPoints();">View My Reward Points</button></td>
