--- a/src/app/common/sidebar/sidebar.component.html
+++ b/src/app/common/sidebar/sidebar.component.html
@@ -5,13 +5,13 @@
         <i class="pi pi-home"></i>
       </a>
     </li>
-    <li>
-      <a routerLink="/login" [class.activated]="!loggedIn">
+    <li *ngIf="!(empLogin||admLogin||custLogin)">
+      <a routerLink="/login" [class.activated]="true">
         <i class="pi pi-sign-in"></i>
       </a>
     </li>
-    <li>
-      <a routerLink="register" [class.activated]="!loggedIn">
+    <li *ngIf="!(empLogin||admLogin||custLogin)">
+      <a routerLink="register" [class.activated]="true">
         <i class="pi pi-user-plus"></i>
       </a>
     </li>
@@ -20,12 +20,12 @@
         <i class="pi pi-id-card"></i>
       </a>
     </li>
-    <li *ngIf="loggedIn">
-      <a routerLink="roomReg" [class.activated]="true">
+    <li *ngIf="custLogin">
+      <a routerLink="custWelcome/roomReg" [class.activated]="true">
         <i class="pi pi-key"></i>
       </a>
     </li>
-    <li *ngIf="loggedIn">
+    <li *ngIf="(empLogin||admLogin||custLogin)">
       <a routerLink="logout" [class.activated]="true">
         <i class="pi pi-sign-out"></i>
       </a>
